--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,15 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - 3001:3000
+    depends_on:
+      - db
