--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "cps-backend",
+  "name": "@alexvoedi/cps-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "A backend for the cPS World of Warcraft guild website",
   "private": true,
   "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexvoedi/cps-backend"
+  },
+  "bugs": {
+    "url": "https://github.com/alexvoedi/cps-backend/issues/"
+  },
+  "keywords": [],
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -21,11 +28,11 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.10",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.3.10",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.10",
     "@nestjs/platform-fastify": "^10.3.10",
     "@prisma/client": "5.17.0",
     "bcrypt": "^5.1.1",
@@ -33,34 +40,34 @@
     "class-validator": "^0.14.1",
     "googleapis": "^140.0.1",
     "joi": "^17.13.3",
-    "reflect-metadata": "^0.2.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^10.4.2",
+    "@nestjs/schematics": "^10.1.3",
+    "@nestjs/testing": "^10.3.10",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.12",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "fastify": "4.28.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-jest": "^29.2.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.5.4"
   },
   "jest": {
     "moduleFileExtensions": [
