--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.10",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.10",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/platform-fastify": "^10.3.10",
+    "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "5.17.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -47,6 +50,8 @@
     "@nestjs/cli": "^10.4.2",
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.10",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.3",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
