--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,23 +21,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get the release version
-        # i.e.: release/1.0.0 -> 1.0.0
-        id: strip-branch-name
-        run: |
-          release_version=$(echo "${{ github.ref }}" | sed 's/refs\/heads\/.*\///')
-          echo "Building release version $release_version"
-          echo "RELEASE_VERSION=$release_version" >> $GITHUB_ENV
-          shell: bash
-
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_IMAGE_NAME:$RELEASE_VERSION
-
-      - name: Tag the image for the private registry $DOCKER_REGISTRY_URL
-        run: docker tag $DOCKER_IMAGE_NAME:$RELEASE_VERSION $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:$RELEASE_VERSION
+        run: docker build . --file Dockerfile --tag $DOCKER_IMAGE_NAME:latest
 
       - name: Create a latest image as well
-        run: docker tag $DOCKER_IMAGE_NAME:$RELEASE_VERSION $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
+        run: docker tag $DOCKER_IMAGE_NAME:latest $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -46,19 +34,8 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      # Push the images to the registry
-      - name: Push the Docker image with version number
-        run: docker push $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:$RELEASE_VERSION
-
       - name: Push the latest tag
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
 
-      # Remove the local images
-      - name: Remove the Docker image with version number
-        run: docker rmi $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:$RELEASE_VERSION
-
       - name: Remove the Docker image with latest tag
         run: docker rmi $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
-
-      - name: Remove the local image
-        run: docker rmi $DOCKER_IMAGE_NAME:$RELEASE_VERSION
