--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
-          registry: $DOCKER_REGISTRY_URL
+          registry: ${{env.DOCKER_REGISTRY_URL}}
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
