--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,6 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag $DOCKER_IMAGE_NAME:latest
 
-      - name: Create a latest image as well
-        run: docker tag $DOCKER_IMAGE_NAME:latest $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
-
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
@@ -35,7 +32,7 @@ jobs:
           password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Push the latest tag
-        run: docker push $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
+        run: docker push $DOCKER_REGISTRY_URL/alexvoedi/$DOCKER_IMAGE_NAME:latest
 
       - name: Remove the Docker image with latest tag
         run: docker rmi $DOCKER_REGISTRY_URL/$DOCKER_IMAGE_NAME:latest
