--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_IMAGE_NAME:latest
+        run: docker build . --file Dockerfile --tag $DOCKER_REGISTRY_URL/alexvoedi/$DOCKER_IMAGE_NAME:latest
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
