--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
@@ -44,6 +45,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fastify": "4.28.0",
     "googleapis": "^140.0.1",
     "joi": "^17.13.3",
     "nodemailer": "^6.9.14",
@@ -68,7 +70,6 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "fastify": "4.28.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
