--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,51 @@ env:
   DOCKER_REGISTRY_URL: ghcr.io
 
 jobs:
-  build_docker_images:
-    # Job name that shows in the GitHub UI
-    name: Build Docker Images
-    # Runner to use
+  check-types:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: |
+          npx pnpm install
+
+      - name: Check Types
+        run: |
+          npx pnpm run typecheck
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: |
+          npx pnpm install
+
+      - name: Lint
+        run: |
+          npx pnpm run lint
+
+  run-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: |
+          npx pnpm install
+
+      - name: Run Tests
+        run: |
+          npx pnpm run test
+
+  build:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
