--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@fastify/compress": "^7.0.3",
     "@fastify/cookie": "^9.3.1",
+    "@fastify/helmet": "^11.1.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.10",
@@ -38,7 +40,9 @@
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/platform-fastify": "^10.3.10",
     "@nestjs/platform-socket.io": "^10.3.10",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/terminus": "^10.2.3",
+    "@nestjs/throttler": "^6.0.0",
     "@nestjs/websockets": "^10.3.10",
     "@prisma/client": "5.17.0",
     "axios": "^1.7.2",
@@ -48,10 +52,13 @@
     "fastify": "4.28.0",
     "googleapis": "^140.0.1",
     "joi": "^17.13.3",
+    "nest-winston": "^1.9.7",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.2",
