--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
     "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "joi": "^17.13.3",
     "nest-winston": "^1.9.7",
     "nodemailer": "^6.9.14",
+    "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
@@ -80,7 +82,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "prisma": "^5.17.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.1",
